# OCCTDebug

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.md  occt_3rdpart_setup_install.cmake  occt_setup_install.cmake
data/brep/: offset.brep
data/occtdbg/: README.txt  debug.occtdbg
data/occtdbg/case/: input.brep
data/step/: cylinder.step
depends/: README.md
depends/occt/include/: Standard_Version.hxx
depends/occt/lib/Debug/libd/: TKBinL.lib  TKDCAF.lib  TKDE.lib  TKDEGLTF.lib  TKDraw.lib  TKG2d.lib  TKG3d.lib  TKGeomAlgo.lib  TKLCAF.lib  TKMesh.lib  TKOffset.lib  TKQADraw.lib  TKRWMesh.lib  TKService.lib  TKShHealing.lib  TKStdL.lib  TKV3d.lib  TKXMesh.lib  TKXSBase.lib  TKXSDRAW.lib  TKXml.lib  TKXmlL.lib
depends/occt/lib/RelWithDebInfo/libi/: TKBO.lib  TKBin.lib  TKBool.lib  TKDECascade.lib  TKDEOBJ.lib  TKDEPLY.lib  TKDEVRML.lib  TKFillet.lib  TKGeomBase.lib  TKHLR.lib  TKMath.lib  TKMeshVS.lib  TKStd.lib  TKTObj.lib  TKTObjDRAW.lib  TKTopAlgo.lib  TKVCAF.lib  TKXDEDRAW.lib  TKXSDRAWDE.lib  TKXSDRAWIGES.lib  TKXSDRAWSTL.lib  TKXmlTObj.lib  TKernel.lib
depends/occt/lib/Release/lib/: TKBRep.lib  TKBinTObj.lib  TKBinXCAF.lib  TKCAF.lib  TKCDF.lib  TKDEIGES.lib  TKDESTL.lib  TKExpress.lib  TKFeat.lib  TKOpenGl.lib  TKOpenGlTest.lib  TKPrim.lib  TKTopTest.lib  TKViewerTest.lib  TKXCAF.lib  TKXSDRAWGLTF.lib  TKXSDRAWOBJ.lib  TKXSDRAWPLY.lib  TKXSDRAWSTEP.lib  TKXSDRAWVRML.lib  TKXmlXCAF.lib
depends/occt_3rdparty/freetype-2.13.3-x64/lib/: freetype.lib
doc/: OCCTDebug_Development_Plan.md  architecture.md  roadmap.md  session_format.md
src/: CMakeLists.txt  MainWindow.cpp  QtWorkbenchDefaults.cmake.example  main.cpp
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: DebugSession.h  DiagnosticFinding.h  Logger.cpp  Logger.h  ProblemContext.h  ShapeDocument.cpp  ShapeDocument.h  ShapeKind.cpp  ShapeKind.h  ShapeNode.h
src/diagnose/: DiagnosticEngine.cpp  DiagnosticEngine.h  IDiagnosticRule.h  RuleRegistry.cpp  RuleRegistry.h
src/diagnose/rules/: CheckBRepValidityRule.cpp  CheckBRepValidityRule.h  CheckNullShapeRule.cpp  CheckNullShapeRule.h  CheckSameParameterRule.cpp  CheckSameParameterRule.h  CheckShellClosedRule.cpp  CheckShellClosedRule.h  CheckToleranceRule.cpp  CheckToleranceRule.h  CheckWireClosedRule.cpp  CheckWireClosedRule.h
src/io/: BRepLoader.cpp  BRepLoader.h  MarkdownReportExporter.cpp  MarkdownReportExporter.h  ReproPackageExporter.cpp  ReproPackageExporter.h  SessionSerializer.cpp  SessionSerializer.h  ShapeTreeJsonExporter.cpp  ShapeTreeJsonExporter.h
src/occt/: BBoxWire.cpp  BBoxWire.h  FaceUvExtractor.cpp  FaceUvExtractor.h  GeometrySummary.cpp  GeometrySummary.h  OcctUtils.h  ShapeInspector.cpp  ShapeInspector.h
src/ui/: DiagnosticPanel.cpp  DiagnosticPanel.h  EdgeSchematicWidget.cpp  EdgeSchematicWidget.h  FaceUvCanvasWidget.cpp  FaceUvCanvasWidget.h  PropertyPanel.cpp  PropertyPanel.h  ShapeTreeWidget.cpp  ShapeTreeWidget.h  TopologyDetailPanel.cpp  TopologyDetailPanel.h  ViewerWidget.cpp  ViewerWidget.h
tests/: CMakeLists.txt  shape_smoke.cpp
